--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,18 +1,18 @@
 version: '3.1'
 
 networks:
-  monitor-net:
+  columbus-net:
     driver: bridge
 
 services:
-  infra-api:
+  columbus-api:
     build: 
       context: ./
       dockerfile: Dockerfile.local    
     networks:
-      - monitor-net
+      - columbus-net
     ports:
-    - '80:8000'
+    - '85:8000'
     restart: always
     environment:
     - WEB_CONCURRENCY=5
